@@ -1,4 +1,8 @@
 2006-05-25 Mikhail Khodjaiants
+	Bug 137970: No default debugger in C++ managed project.
+	* MIPlugin.java
+
+2006-05-25 Mikhail Khodjaiants
 	Bug 109733: Request to make certain methods as public (MISession and MIInferior).
 	* MIInferior.java
 	* MISession.java
